Fixes #504: [Bug] Transparent PNG images show the dopamine logo behind

--- a/src/app/ui/components/playback-cover-art/playback-cover-art.component.scss
+++ b/src/app/ui/components/playback-cover-art/playback-cover-art.component.scss
@@ -29,3 +29,7 @@
     display: flex;
     flex-direction: column;
 }
+
+.app-playback-cover-art__content-background {
+    background: black;
+}
